--- a/naga.html
+++ b/naga.html
@@ -21,11 +21,11 @@
     <hr>
     <ul class="slideout-nav">
       <li><a class="slideout-list-items" href="index.html">Home</a></li>
-      <li><a class="slideout-list-items" href="#teams">Hydracore Teams</a></li>
-      <li><a class="slideout-list-items" href="#news">News</a></li>
+      <li><a class="slideout-list-items" href="index.html#teams">Hydracore Teams</a></li>
+      <li><a class="slideout-list-items" href="index.html#news">News</a></li>
       <li><a class="slideout-list-items" href="media.html">Media</a></li>
-      <li><a class="slideout-list-items" href="#contact">Contact</a></li>
-      <li><a class="slideout-list-items" href="#sponsors">Sponsors</a></li>
+      <li><a class="slideout-list-items" href="index.html#contact">Contact</a></li>
+      <li><a class="slideout-list-items" href="index.html#sponsors">Sponsors</a></li>
       <li><a class="slideout-list-items" href="#stream-team">Stream Team</a></li>
       <li><a class="slideout-list-items" href="#">Forum</a></li>
       <li><a class="slideout-list-items" href="#">Store</a></li>
@@ -35,37 +35,37 @@
   <main id="panel">
     <header>
       <button class="toggle-button">☰</button>
-      <img class="img--logo" src="images/logo.webp" alt="hydracore gaming logo">
+      <img class="img--logo" src="images/team-naga.png" alt="hydracore gaming logo">
       <h2 class="headline--primary">The Next Evolution in eSports</h2>
     </header>
     <div class="wrapper">
-      <div class="grid__row" id="news">
-        <div class="grid__col--12">
-          <div class="card">
-            <h4 class="headline--secondary white">Upcoming Tournaments</h4>
-
-            <h3 class="headline--tertiary">Team Naga</h3>
-            <ul class="list--primary">
-              <li>Go4R6 (PC) North America Cup #148
-                <p>Sunday, 13JAN19 @ 1700 EST</p>
-              </li>
-              <li>Go4R6 (PC) North America Cup #149
-                <p>Sunday, 20JAN19 @ 1700 EST</p>
-              </li>
-            </ul>
-            <h3 class="headline--tertiary">Team Fearless</h3>
-            <ul class="list--primary">
-              <li>Go4R6 (PC) North America Cup #153
-                <p>Sunday, 02FEB19 @ 1700 EST</p>
-              </li>
-              <li>Go4R6 (PC) North America Cup #149
-                <p>Sunday, 24FEB19 @ 1700 EST</p>
-              </li>
-              <h3 class="headline--secondary"><a href="#">View More</a></h3>
-            </ul>
-          </div>
+        <div class="grid__col--skills">
+            <div class="skills--card">
+                <a href="naga.html"><img class="img--frame__roster" src="images/zee.png" alt="naga logo">
+                <h3 class="headline--tertiary">ZeeKiwi.HCG</h3></a>
+                <hr>
+            </div>
+            <div class="skills--card">
+                <a href="fearless.html"><img class="img--frame__roster" src="images/flexy.jpg" alt="main logo">
+                <h3 class="headline--tertiary">Flexy.HCG</h3></a>
+                <hr>
+            </div>
+            <div class="skills--card">
+                <a href="synergy.html"><img class="img--frame__roster" src="images/mrv.jpg" alt="main logo">
+                <h3 class="headline--tertiary">MRV2.HCG</h3></a>
+                <hr>
+            </div>
+            <div class="skills--card">
+                <a href="tranquil.html"><img class="img--frame__roster" src="images/kinky.jpg" alt="tranquil logo">
+                <h3 class="headline--tertiary">Kinky.HCG</h3></a>
+                <hr>
+            </div>
+            <div class="skills--card">
+                <a href="smash.html"><img class="img--frame__roster" src="images/murky.jpg" alt="main logo">
+                <h3 class="headline--tertiary">Murky.HCG</h3></a>
+                <hr>
+            </div>
         </div>
-      </div>
     </div>
 
     <!-- The Modal -->
@@ -107,57 +107,6 @@
 
 
 
-    <div class="grid__row" id="sponsors">
-
-
-      <h2 class="headline--primary">Sponsors</h2>
-      <div class="grid__col--proj">
-        <ul>
-          <li class="sponsors"><a href="https://www.atmosrx.com/" target="_blank"><img class="img--frame"
-                src="images/logo-atmos-blue.svg" atl="atmosRX"></a></li>
-          <li class="sponsors"><a href="https://www.kinguin.net/" target="_blank"><img class="img--frame"
-                src="images/kinguin.png" atl="Kinguin"></a></li>
-          <li class="sponsors"><a href="https://www.htc.com/us/" target="_blank"><img class="img--frame"
-                src="images/HTC.svg" atl="HTC"></a></li>
-          <li class="sponsors"><a href="https://www.hidemyass.com/en-us/index" target="_blank"><img class="img--frame"
-                src="images/hidemyass.png" atl="HideMyAss VPN"></a></li>
-        </ul>
-      </div>
-
-    </div>
-
-
-    <div class="wrapper">
-      <h4 id="teams" class="headline--secondary white">Hydracore Teams</h4>
-      <div class="grid__col--skills">
-        <div class="skills--card">
-          <a href="naga.html"><img class="img--frame__teams" src="images/team-naga.png" alt="naga logo">
-          <h3 class="headline--tertiary">Team Naga</h3></a>
-          <hr>
-        </div>
-        <div class="skills--card">
-            <a href="fearless.html"><img class="img--frame__teams" src="images/main-logo.png" alt="main logo">
-          <h3 class="headline--tertiary">Team Fearless</h3></a>
-          <hr>
-        </div>
-        <div class="skills--card">
-            <a href="synergy.html"><img class="img--frame__teams" src="images/synergy-logo.png" alt="main logo">
-          <h3 class="headline--tertiary">Team Synergy</h3></a>
-          <hr>
-        </div>
-        <div class="skills--card">
-            <a href="tranquil.html"><img class="img--frame__teams" src="images/team-tranquil.png" alt="tranquil logo">
-          <h3 class="headline--tertiary">Team Tranquil</h3></a>
-          <hr>
-        </div>
-        <div class="skills--card">
-            <a href="smash.html"><img class="img--frame__teams" src="images/main-logo.png" alt="main logo">
-          <h3 class="headline--tertiary">Team Smash</h3></a>
-          <hr>
-        </div>
-      </div>
-
-    </div>
 
 
     <h4 class="headline--secondary" id="contact">Contact</h4>
@@ -181,11 +130,11 @@
 
       <nav id="inline-footer-nav">
         <ul>
-          <li class="nav__item"><a href="#">Home</a></li>
-          <li class="nav__item"><a href="#news">News</a></li>
-          <li class="nav__item"><a href="#sponsors">Sponsors</a></li>
-          <li class="nav__item"><a href="#teams">Teams</a></li>
-          <li class="nav__item"><a href="#contact">Contact</a></li>
+          <li class="nav__item"><a href="index.html">Home</a></li>
+          <li class="nav__item"><a href="index.html#news">News</a></li>
+          <li class="nav__item"><a href="index.html#sponsors">Sponsors</a></li>
+          <li class="nav__item"><a href="index.html#teams">Teams</a></li>
+          <li class="nav__item"><a href="index.html#contact">Contact</a></li>
         </ul>
       </nav>
       <h6>Designed by: Mark Young</h6>
