initial team naga page completed

--- a/index.html
+++ b/index.html
@@ -17,25 +17,28 @@
 
 
   <nav id="menu">
-    <h2 id="slideout-text">Menu</h2>
-    <hr>
-    <ul class="slideout-nav">
-      <li><a class="slideout-list-items" href="index.html">Home</a></li>
-      <li><a class="slideout-list-items" href="#teams">Hydracore Teams</a></li>
-      <li><a class="slideout-list-items" href="#news">News</a></li>
-      <li><a class="slideout-list-items" href="media.html">Media</a></li>
-      <li><a class="slideout-list-items" href="#contact">Contact</a></li>
-      <li><a class="slideout-list-items" href="#sponsors">Sponsors</a></li>
-      <li><a class="slideout-list-items" href="#stream-team">Stream Team</a></li>
-      <li><a class="slideout-list-items" href="#">Forum</a></li>
-      <li><a class="slideout-list-items" href="#">Store</a></li>
-    </ul>
+    <div class="menu-wrapper">
+      <h2 id="slideout-text">Menu</h2>
+      <hr>
+      <ul class="slideout-nav">
+        <li><a class="slideout-list-items" href="index.html">Home</a></li>
+        <li><a class="slideout-list-items" href="index.html#news">News</a></li>
+        <li><a class="slideout-list-items" href="index.html#sponsors">Sponsors</a></li>
+        <li><a class="slideout-list-items" href="index.html#teams">Hydracore Teams</a></li>
+        <li><a class="slideout-list-items" href="index.html#contact">Contact</a></li>
+        <li><a class="slideout-list-items" href="media.html">Media</a></li>
+        <li><a class="slideout-list-items" href="#stream-team">Stream Team</a></li>
+        <li><a class="slideout-list-items" href="#">Forum</a></li>
+        <li><a class="slideout-list-items" href="#">Store</a></li>
+      </ul>
+      <img class="img--frame__menu" src="images/main-logo.png" alt="main logo">
+    </div>
   </nav>
 
   <main id="panel">
     <header>
       <button class="toggle-button">☰</button>
-      <img class="img--logo" src="images/logo.webp" alt="hydracore gaming logo">
+      <img class="img--logo" src="images/main-logo.png" alt="hydracore gaming logo">
       <h2 class="headline--primary">The Next Evolution in eSports</h2>
     </header>
     <div class="wrapper">
@@ -68,42 +71,7 @@
       </div>
     </div>
 
-    <!-- The Modal -->
-    <!-- <div id="myModal" class="modal"> -->
 
-    <!-- Modal content -->
-    <!-- <div class="modal-content">
-        <div class="modal-header">
-          <span class="close">&times;</span>
-          <h2 class="white">My Resume</h2>
-        </div>
-        <div class="modal-body">
-          <img class="img--resume" src="images/resume.jpg" alt="resume">
-        </div>
-        <div class="modal-footer">
-          <h3 class="white">Front-End Web Developer</h3>
-        </div>
-      </div>
-
-    </div>
-
-    <div id="myModal-2" class="modal"> -->
-
-    <!-- Modal content -->
-    <!-- <div class="modal-content">
-        <div class="modal-header">
-          <span id="close-2" class="close">&times;</span>
-          <h2 class="white">What is a Web Developer?</h2>
-        </div>
-        <div class="modal-body">
-          <h3>An organism that converts caffeine into code</h3>
-        </div>
-        <div class="modal-footer">
-          <h3 class="white">{ / }</h3>
-        </div>
-      </div>
-
-    </div> -->
 
 
 
@@ -132,27 +100,32 @@
       <div class="grid__col--skills">
         <div class="skills--card">
           <a href="naga.html"><img class="img--frame__teams" src="images/team-naga.png" alt="naga logo">
-          <h3 class="headline--tertiary">Team Naga</h3></a>
+            <h3 class="headline--tertiary">Team Naga</h3>
+          </a>
           <hr>
         </div>
         <div class="skills--card">
-            <a href="fearless.html"><img class="img--frame__teams" src="images/main-logo.png" alt="main logo">
-          <h3 class="headline--tertiary">Team Fearless</h3></a>
+          <a href="fearless.html"><img class="img--frame__teams" src="images/main-logo.png" alt="main logo">
+            <h3 class="headline--tertiary">Team Fearless</h3>
+          </a>
           <hr>
         </div>
         <div class="skills--card">
-            <a href="synergy.html"><img class="img--frame__teams" src="images/synergy-logo.png" alt="main logo">
-          <h3 class="headline--tertiary">Team Synergy</h3></a>
+          <a href="synergy.html"><img class="img--frame__teams" src="images/synergy-logo.png" alt="main logo">
+            <h3 class="headline--tertiary">Team Synergy</h3>
+          </a>
           <hr>
         </div>
         <div class="skills--card">
-            <a href="tranquil.html"><img class="img--frame__teams" src="images/team-tranquil.png" alt="tranquil logo">
-          <h3 class="headline--tertiary">Team Tranquil</h3></a>
+          <a href="tranquil.html"><img class="img--frame__teams" src="images/team-tranquil.png" alt="tranquil logo">
+            <h3 class="headline--tertiary">Team Tranquil</h3>
+          </a>
           <hr>
         </div>
         <div class="skills--card">
-            <a href="smash.html"><img class="img--frame__teams" src="images/main-logo.png" alt="main logo">
-          <h3 class="headline--tertiary">Team Smash</h3></a>
+          <a href="smash.html"><img class="img--frame__teams" src="images/main-logo.png" alt="main logo">
+            <h3 class="headline--tertiary">Team Smash</h3>
+          </a>
           <hr>
         </div>
       </div>
@@ -163,10 +136,13 @@
     <p>If you're interested in joining a team or want more information about the orginazation, we'd love to hear from
       you!</p>
     <ul class="contact-info">
-      <li><a href="https://discord.gg/3ZbUXDt" target="_blank"><img class="contact-icons" src="images/discord-icon.png"></a></li>
-      <li><a href="mailto:HydraCoreGaming@gmail.com" target="_blank"><img class="contact-icons" src="images/email-icon.png"></a>
+      <li><a href="https://discord.gg/3ZbUXDt" target="_blank"><img class="contact-icons"
+            src="images/discord-icon.png"></a></li>
+      <li><a href="mailto:HydraCoreGaming@gmail.com" target="_blank"><img class="contact-icons"
+            src="images/email-icon.png"></a>
       </li>
-      <li><a href="https://twitter.com/hydracoregaming" target="_blank"><img class="contact-icons" src="images/twitter-icon.png"></a></li>
+      <li><a href="https://twitter.com/hydracoregaming" target="_blank"><img class="contact-icons"
+            src="images/twitter-icon.png"></a></li>
     </ul>
     </div>
     <hr>
@@ -210,21 +186,21 @@
     });
 
     function close(eve) {
-  eve.preventDefault();
-  slideout.close();
-}
+      eve.preventDefault();
+      slideout.close();
+    }
 
-slideout
-  .on('beforeopen', function() {
-    this.panel.classList.add('panel-open');
-  })
-  .on('open', function() {
-    this.panel.addEventListener('click', close);
-  })
-  .on('beforeclose', function() {
-    this.panel.classList.remove('panel-open');
-    this.panel.removeEventListener('click', close);
-  });
+    slideout
+      .on('beforeopen', function () {
+        this.panel.classList.add('panel-open');
+      })
+      .on('open', function () {
+        this.panel.addEventListener('click', close);
+      })
+      .on('beforeclose', function () {
+        this.panel.classList.remove('panel-open');
+        this.panel.removeEventListener('click', close);
+      });
   </script>
 
 </body>
